--- a/src/main/resources/templates/view-products.html
+++ b/src/main/resources/templates/view-products.html
@@ -7,9 +7,9 @@
       
       <script>
          $(document).ready(function(){
-            $.getJSON("http://localhost:8080/products", function(result){
+            $.getJSON("http://products.local/demo/products", function(result){
                $.each(result, function(key,value) {
-                  $("#productsJson").append(value.id+" "+value.name+" ");
+                  $("#productsJson").append(value.id+" "+value.name+" </br>");
                }); 
             });
          });
