--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
       <link href = "css/styles.css" rel = "stylesheet"/>
       <title>Spring Boot Application</title>
    </head>
-   <body>
+   <body background="blue">
    <h1 th:text = "#{welcome.text}"></h1>
       <h4>Welcome to Thymeleaf Spring Boot web application</h4>
    </body>
